# PAL-adin

./: .env.example  .gitignore  .prettierrc  AI_INTEGRATION_STRATEGY.md  CONTRIBUTING.md  CONTRIBUTORS.md  CORE_VALUES.md  GOVERNANCE.md  INFORMATION_RETRIEVAL_SYSTEM.md  LICENSE  Makefile  PAL_memory.py  PHYSICAL.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  SECURITY_INFRASTRUCTURE.md  SYSTEM_ARCHITECTURE.md  TECHNICAL.md  TECH_STACK_RECOMMENDATION.md  UNOWN_BRANDING_DESIGN.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  requirements.txt
docs/: CHAT_INTERFACE_DESIGN.md  CONTRIBUTING.md  DEPLOYMENT_STRATEGY.md  DEVELOPMENT_ROADMAP.md  GOVERNANCE.md  PALADIN_FINAL_ARCHITECTURE.md  PALADIN_IMPLEMENTATION_GUIDE.md  PALADIN_PERSONALITY_INTEGRATION.md  PALADIN_PHYSICAL_BODY_PLAN.md  PALADIN_PHYSICAL_SUMMARY.md  PALADIN_TECHNICAL_SPECIFICATIONS.md  PROJECT_STRUCTURE.md  SELF_HOSTING_STRATEGY.md  UNOWN_PRIVACY_COMPLIANCE.md  UNOWN_PROJECT_SUMMARY.md  UNOWN_TECH_STACK_REVISION.md
frontend/: Dockerfile  package.json
memories/: 2025-11-01-memory.md
monitoring/prometheus/: prometheus.yml
